<resources>
    <string name="app_name">My Application</string>
    <string name="gamecenter">Game Center</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="password_again">Enter Password Again</string>
    <string name="slidingTileGame">Sliding Tile</string>
    <string name="gameListView">Your Game List:</string>
    <string name="addGame">Add Game</string>
    <string name="deleteGame">Delete Game</string>
    <string name="gamesAvailable">Here are the games available for playing now!</string>
    <string name="gamesToDelete">Here are the games in your game list!</string>
    <string name="tapToAdd">Tap the game to add to your list!</string>
    <string name="tapToDelete">Tap the game to delete from your list!</string>
    <string name="game2048">2048</string>
    <string name="snake">Snake</string>
    <string name="mineSweeperGame">Minesweeper</string>
    <string name="sliding_tile_band">Welcome To Sliding Tiles \nA Puzzle Game where you must arrange the numbers in the correct order</string>
    <string name="new_game">New Game</string>
    <string name="load_saved_game">Load Saved Game</string>
    <string name="save_game">Save Game</string>
    <string name="my_score">My Score</string>
    <string name="global_score">Global Score</string>
    <string name="tap_save">Tap to save at the slot.</string>
    <string name="save_band_text">Select the game slot to save!</string>
    <string name="tap_load">Tap to load from the slot.</string>
    <string name="load_band_text">Select the game slot to load!</string>
    <string name="undo_button">Undo</string>
    <string name="choose_complexity_band_text">Choose the sliding tile game complexity.</string>
    <string name="complexity_3">3 X 3</string>
    <string name="complexity_4">4 X 4</string>
    <string name="complexity_5">5 X 5</string>
    <string name="set_undo_step_band">Set your undo steps here:</string>
    <string name="accept">Accept</string>
    <string name="auto_save_slot">Auto-save slot: \n Tap to load your auto-save game.</string>
    <string name="default_complexity">3</string>
    <string name="custom_slot">Customized save slot:</string>
    <string name="global_score_band">Global Score:</string>
    <string name="app_name_sweepMine">SweepMine</string>
    <string name="Welcome_To_Sweep_Mine_Game">Welcome To Sweep Mine Game!</string>
    <string name="_10_BOMBS">10 BOMBS</string>
    <string name="_15_BOMBS">15 BOMBS</string>
    <string name="_20_BOMBS">20 BOMBS</string>
    <string name="crazy">crazy mode</string>
    <string name="lucky">lucky mode</string>
    <string name="Asking">Please choose the number of bombs as you like</string>
    <string name="choose">Please choose bomb number as you like!</string>
    <string name="time">0</string>
    <string name="flag">0</string>
    <string name="help">help</string>
    <string name="help_left">(1)</string>
    <string name="game_2048_band">Welcome To 2048 \nJoining the tile and get the 2048 tile</string>
    <string name="mine_sweeper_band">Welcome To Minesweeper \nSweep all the mines and get the victory</string>
    <string name="minesweeper_time">Time:</string>
    <string name="minesweeper_flag">Flag:</string>
    <string name="log_off">Log off</string>
    <string name="_2048_topper">2048</string>
    <string name="instruction_2048">Join the number and get to the </string>
    <string name="_2048_goal">2048 tile!</string>
    <string name="restart">Restart</string>
    <string name="undo">Undo</string>
    <string name="undo_remain">(0)</string>
    <string name="player_score">Player Score:</string>
    <string name="rank">#</string>
    <string name="player">Player</string>
    <string name="score">Score</string>
</resources>
