<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_delete_band"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/gamesAvailable"
        android:textStyle="bold"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tap_band"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/tapToAdd"
        android:textStyle="bold"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="300dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/add_delete_game_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/sliding_tile_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/slidingTileGame" />

            <Button
                android:id="@+id/game2048_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/game2048" />

            <Button
                android:id="@+id/snake_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/mineSweeperGame" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>