<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SlidingTileGame.StartingActivity">

    <TextView
        android:id="@+id/complexity_text"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/choose_complexity_band_text"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <Button
        android:id="@+id/button3x3"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_below="@+id/complexity_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:text="@string/complexity_3" />

    <Button
        android:id="@+id/button4x4"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_below="@+id/button3x3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:text="@string/complexity_4" />

    <Button
        android:id="@+id/button5x5"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_below="@+id/button4x4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:text="@string/complexity_5" />

    <TextView
        android:id="@+id/set_undo_step_textview"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_below="@+id/button5x5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/set_undo_step_band" />

    <Button
        android:id="@+id/accept_button"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/set_undo_step_textview"
        android:layout_alignRight="@+id/set_undo_step_textview"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="80dp"
        android:text="@string/accept" />

    <EditText
        android:id="@+id/undo_step_input"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/button3x3"
        android:layout_alignLeft="@+id/button3x3"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/default_complexity"
        android:gravity="center"
        android:autofillHints="" />


</RelativeLayout>