<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/GameText"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/sliding_tile_band"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/new_game_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/GameText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="100dp"
        android:text="@string/new_game"
        android:textStyle="bold" />

    <Button
        android:id="@+id/load_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/new_game_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/load_saved_game"
        android:textStyle="bold" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/load_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/save_game"
        android:textStyle="bold" />

    <Button
        android:id="@+id/my_score_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/save_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/my_score"
        android:textStyle="bold" />

    <Button
        android:id="@+id/global_score_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/my_score_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/global_score"
        android:textStyle="bold" />

</RelativeLayout>