<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/save_load_band"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/save_band_text"
        android:textStyle="bold"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/select_band"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/tap_save"
        android:textStyle="bold"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="300dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/save_load_slot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="17sp"
                android:text="@string/custom_slot" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>