<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:background="@color/backgroundMain"
    android:layout_weight="7"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="45sp"
            android:textStyle="bold"
            android:text="@string/_2048_topper"
            />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/current_score"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/tileHolderBackground"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:clickable="false"
            android:gravity="center"
            android:textColor="@color/backgroundMain"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/highest_score"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:clickable="false"
            android:textColor="@color/backgroundMain"
            android:background="@color/tileHolderBackground"
            android:layout_weight="2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/instruction_2048"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_2048_goal"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <Button
            android:id="@+id/restart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="22sp"
            android:gravity="center"
            android:background="#00000000"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:text="@string/restart"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />



        <Button
            android:id="@+id/undo_button_2048"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="22sp"
            android:gravity="center"
            android:background="#00000000"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:text="@string/undo" />

        <TextView
            android:id="@+id/undo_step_left_2048"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="22sp"
            android:gravity="center"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:text="@string/undo_remain"

            />


    </LinearLayout>

    <fall2018.csc207_project.game2048.BoardView
        android:id="@+id/gameView"
        android:layout_width="378dp"
        android:background="@color/tileHolderBackground"
        android:layout_height="378dp">


    </fall2018.csc207_project.game2048.BoardView>

</LinearLayout>