<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold" />

    <Button
        android:id="@+id/add_game_button"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="68dp"
        android:text="@string/addGame"
        android:textStyle="bold" />

    <Button
        android:id="@+id/delete_game_button"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="20dp"
        android:text="@string/deleteGame"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="355dp"
        android:layout_below="@+id/welcome"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="138dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold">

        <LinearLayout
            android:id="@+id/local_center_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/gameListView"
                android:textSize="25sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/log_off_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:textStyle="bold"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="20dp"
        android:text="@string/log_off" />

</RelativeLayout>