<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/signup_username"
        android:layout_width="245dp"
        android:layout_height="50sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="35dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="245dp"
        android:layout_height="50sp"
        android:layout_below="@+id/signup_username"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/signup_password2"
        android:layout_width="245dp"
        android:layout_height="50sp"
        android:layout_below="@+id/signup_password"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/sign_in_label"
        android:textStyle="bold"
        android:layout_width="105dp"
        android:layout_height="50sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/username"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/sign_up_label"
        android:layout_width="105dp"
        android:layout_height="50sp"
        android:layout_below="@+id/sign_in_label"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/password"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sign_up_label2"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_below="@+id/sign_up_label"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/password_again"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="245dp"
        android:layout_height="50sp"
        android:layout_below="@+id/signup_password2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="206dp"
        android:textStyle="bold"
        android:hint="@string/signup" />

</RelativeLayout>